...
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Date of Purchase or Acquisition"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Description"
            android:inputType="textMultiLine" />

...
                android:layout_height="170dp"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

    </ScrollView>
    <Button
    android:id="@+id/button_ok"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="OK" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel" />
...
