...
            android:id="@+id/sort_by_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_value" />

    <Button
        android:id="@+id/sort_by_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_tag" />


    <RadioGroup
            android:id="@+id/sort_order_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/sort_ascending"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ascending" />

        <RadioButton
                android:id="@+id/sort_descending"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/descending" />
    </RadioGroup>

...
